--- a/self-taught-practice/applecoding/landing-page/style.css
+++ b/self-taught-practice/applecoding/landing-page/style.css
@@ -136,7 +136,61 @@ a {
 /* CONTENT */
 
 body {
+  width: 100%;
+  height: 100vh;
+
+  font-family: -apple-system, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-/* background: rgb(2,0,36);
-background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(5,42,110,1) 2%, rgba(17,143,215,1) 76%); */
+/* Header */
+header {
+  display: flex;
+  justify-content: space-evenly;
+  color: #fff;
+  width: 100%;
+  padding-top: 70px;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    0deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(5, 42, 110, 1) 1%,
+    rgba(17, 143, 215, 1) 76%
+  );
+}
+
+.header-left h2 {
+  font-size: 30px;
+  font-weight: 500;
+  margin-bottom: 15px;
+}
+
+.header-left p {
+  font-weight: 300;
+  margin-bottom: 15px;
+}
+
+.btn {
+  color: #fff;
+  padding: 10px 30px;
+  border: none;
+  background: #343a3f;
+  cursor: pointer;
+}
+
+/* Section 1 */
+.section-1 {
+  width: 100%;
+  text-align: center;
+  padding: 50px 0;
+}
+
+.section-1 h3 {
+  font-size: 20px;
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+
+.section-1 p {
+  font-weight: 300;
+  margin-bottom: 20px;
+}
