--- a/self-taught-practice/applecoding/landing-page/style.css
+++ b/self-taught-practice/applecoding/landing-page/style.css
@@ -194,3 +194,66 @@ header {
   font-weight: 300;
   margin-bottom: 20px;
 }
+
+/* Section-2 */
+.section-2 {
+  width: 100%;
+  text-align: center;
+  padding: 50px 0;
+  background: #3d7fb6;
+}
+
+.services-top {
+  margin-bottom: 30px;
+}
+
+.services-top h3 {
+  font-size: 10px;
+  color: yellow;
+  margin-bottom: 10px;
+}
+
+.services-top p {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.services-bottom {
+  display: flex;
+  justify-content: space-evenly;
+  width: 80%;
+  margin: auto;
+}
+
+.service {
+  text-align: center;
+}
+
+.circle {
+  position: relative;
+  margin: auto;
+  width: 50px;
+  height: 50px;
+  background: #fff;
+  border-radius: 50%;
+}
+
+.circle i {
+  position: absolute;
+  color: #3d7fb6;
+  top: 16px;
+  left: 19px;
+}
+
+.service h4 {
+  color: #fff;
+  font-weight: 500;
+  margin: 10px 0;
+}
+
+.service p {
+  color: #fff;
+  font-size: 10px;
+  font-weight: 400;
+}
