Updated 2 more sections

--- a/self-taught-practice/applecoding/landing-page/style.css
+++ b/self-taught-practice/applecoding/landing-page/style.css
@@ -200,7 +200,7 @@ header {
 .section-2 {
   width: 100%;
   text-align: center;
-  padding: 50px 0;
+  padding: 70px 0;
   background: #3d7fb6;
 }
 
@@ -210,6 +210,7 @@ header {
 
 .services-top h3 {
   font-size: 10px;
+  font-weight: 600;
   color: yellow;
   margin-bottom: 10px;
 }
@@ -257,4 +258,87 @@ header {
   color: #fff;
   font-size: 10px;
   font-weight: 400;
+}
+
+/* Section-3 */
+.section-3 {
+  width: 100%;
+  text-align: center;
+  padding: 100px 0;
+}
+
+.section-3 .services-top {
+  margin-bottom: 30px;
+}
+
+.section-3 .services-top h3 {
+  font-size: 10px;
+  font-weight: 600;
+  color: rgb(196, 196, 6);
+  margin-bottom: 10px;
+}
+
+.section-3 .services-top p {
+  color: #000;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.portfolio-wrap {
+  display: flex;
+  width: 70%;
+  margin: 30px auto;
+}
+
+.portfolio-wrap div img {
+  width: 50%;
+  height: 200px;
+}
+
+/* Footer */
+footer {
+  width: 50%;
+  height: 200px;
+  margin: 80px auto;
+}
+
+.icons-wrap {
+  justify-content: center;
+  display: flex;
+  margin: 30px 0;
+}
+
+.icons-wrap a {
+  position: relative;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: #1a7ea1;
+  margin: 0 15px;
+  cursor: pointer;
+}
+
+.icons-wrap i {
+  position: absolute;
+  left: 14px;
+  top: 12px;
+  font-size: 25px;
+  color: #fff;
+}
+
+.icons-wrap .fa-facebook-f {
+  left: 17px;
+}
+
+.icons-wrap .fa-github {
+  left: 13px;
+}
+
+.copyright {
+  text-align: center;
+}
+
+.copyright p {
+  font-size: 12px;
+  color: rgb(109, 109, 109);
 }
