--- a/self-taught-practice/applecoding/landing-page/style.css
+++ b/self-taught-practice/applecoding/landing-page/style.css
@@ -142,6 +142,10 @@ body {
   font-family: -apple-system, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.clear-both {
+  clear: both;
+}
+
 /* Header */
 header {
   display: flex;
@@ -152,7 +156,6 @@ header {
   background: rgb(2, 0, 36);
   background: linear-gradient(
     0deg,
-    rgba(2, 0, 36, 1) 0%,
     rgba(5, 42, 110, 1) 1%,
     rgba(17, 143, 215, 1) 76%
   );
@@ -161,12 +164,12 @@ header {
 .header-left h2 {
   font-size: 30px;
   font-weight: 500;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
 }
 
 .header-left p {
   font-weight: 300;
-  margin-bottom: 15px;
+  margin-bottom: 25px;
 }
 
 .btn {
@@ -285,14 +288,61 @@ header {
 }
 
 .portfolio-wrap {
-  display: flex;
-  width: 70%;
+  width: 75%;
   margin: 30px auto;
 }
 
-.portfolio-wrap div img {
+.portfolio-wrap > div {
+  position: relative;
   width: 50%;
-  height: 200px;
+  height: 340px;
+  background-size: cover;
+  float: left;
+  color: rgba(255, 255, 255, 0.863);
+  text-align: left;
+  padding: 220px 60px 20px 60px;
+  cursor: pointer;
+}
+
+.white-box {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  transition: 0.5s;
+}
+
+.white-box:hover {
+  border: 30px solid #fff;
+}
+
+.portfolio-wrap div h4 {
+  font-size: 14px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.portfolio-wrap div p {
+  font-size: 15px;
+  font-weight: 300;
+}
+
+.box-1 {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    url('./img/portfolio-1.jpeg');
+}
+.box-2 {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    url('./img/portfolio-2.jpeg');
+}
+.box-3 {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    url('./img/portfolio-3.jpeg');
+}
+.box-4 {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    url('./img/portfolio-4.jpeg');
 }
 
 /* Footer */
@@ -341,4 +391,19 @@ footer {
 .copyright p {
   font-size: 12px;
   color: rgb(109, 109, 109);
+}
+
+@media screen and (max-width: 768px) {
+  header {
+    display: block;
+    text-align: center;
+  }
+
+  header .btn {
+    margin: 25px 0 35px 0;
+  }
+
+  .portfolio-wrap div {
+    width: 100%;
+  }
 }
