--- a/self-taught-practice/applecoding/portfolio/style.css
+++ b/self-taught-practice/applecoding/portfolio/style.css
@@ -190,7 +190,7 @@ a {
   margin-bottom: 10px;
 }
 
-.my-info button {
+.btn {
   padding: 8px 25px;
   background: #6fbaf8;
   color: #fff;
@@ -245,13 +245,13 @@ a {
 .main {
   margin-top: 35px;
   width: 100%;
+  height: 450px;
   display: flex;
-  /* justify-content: space-between; */
+  justify-content: space-between;
 }
 
 .works {
-  /* width: 20%; */
-  padding: 20px;
+  padding: 25px;
   padding-bottom: 150px;
 }
 
@@ -267,8 +267,8 @@ a {
 }
 
 .skill {
-  width: 60%;
-  padding: 20px;
+  width: 55%;
+  padding: 25px;
 }
 
 .skill p {
@@ -283,4 +283,40 @@ a {
   height: 1px;
   background: #cddbe9d0;
   margin: 30px 0;
+}
+
+.skills a {
+  font-size: 14px;
+  background: #6fbaf8;
+  border: 0.5px solid #6fbaf8;
+  color: #fff;
+  border-radius: 14px;
+  padding: 6px 15px;
+  margin-right: 8px;
+}
+
+.links {
+}
+
+.findme {
+  padding: 40px 25px;
+  text-align: center;
+}
+
+.findme i {
+  font-size: 40px;
+  color: #6fbaf8;
+  margin-bottom: 10px;
+}
+
+.findme p {
+  font-size: 14px;
+  font-weight: 400;
+  margin-bottom: 15px;
+}
+
+.findme a p {
+  margin: 20px;
+  font-size: 14px;
+  color: #6fbaf8;
 }
