--- a/self-taught-practice/applecoding/sass-practice/style.css
+++ b/self-taught-practice/applecoding/sass-practice/style.css
@@ -64,6 +64,7 @@ fieldset {
 .grid-parents {
   display: grid;
   width: 80%;
+  max-width: 1280px;
   margin: auto;
   grid-template-columns: 0.2fr 1fr 1fr;
   grid-template-rows: 80px 100px 100px;
@@ -85,4 +86,9 @@ fieldset {
 .grid-main {
   grid-column: 2/4;
   grid-row: 2/4;
+}
+
+/* Sticky */
+.grey {
+  background: grey;
 }
