--- a/self-taught-practice/applecoding/sticky/style.css
+++ b/self-taught-practice/applecoding/sticky/style.css
@@ -99,6 +99,13 @@ body {
   margin: auto;
 }
 
+h1 {
+  margin-top: 100px;
+  font-size: 100px;
+  color: #fff;
+  width: 100%;
+}
+
 .grey {
   /* background: grey; */
   height: 2000px;
@@ -111,7 +118,7 @@ body {
   color: #fff;
   width: 40%;
   position: sticky;
-  top: 100px;
+  top: 400px;
   padding: 40px;
 }
 
