--- a/self-taught-practice/applecoding/sticky/style.css
+++ b/self-taught-practice/applecoding/sticky/style.css
@@ -94,38 +94,55 @@ body {
 }
 
 .container {
-  width: 100%;
-  max-width: 1280px;
+  width: 90%;
+  max-width: 1920px;
   margin: auto;
 }
 
-h1 {
+/* Video background */
+.video-box {
+  position: relative;
+  height: 1000px;
+  width: 100%;
+  overflow: hidden;
+}
+
+.video-container {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 0;
+}
+
+.video-box h1 {
+  position: absolute;
+  top: 25%;
+  left: 5%;
+  z-index: 1;
   margin-top: 100px;
-  font-size: 100px;
+  font-size: 180px;
   color: #fff;
   width: 100%;
 }
 
 .grey {
-  /* background: grey; */
   height: 2000px;
-  margin-top: 600px;
+  margin-top: 100px;
   margin-bottom: 1600px;
 }
 
 .grey h2 {
+  position: sticky;
   float: left;
   color: #fff;
   width: 40%;
-  position: sticky;
-  top: 400px;
+  top: 300px;
   padding: 40px;
+  font-size: 30px;
 }
 
 .grey img {
   position: sticky;
-  top: 100px;
-  /* right: -300px; */
-  overflow: hidden;
   float: right;
+  top: 100px;
 }
