--- a/18-javascript-practice/todolist/style.css
+++ b/18-javascript-practice/todolist/style.css
@@ -105,7 +105,8 @@ body {
 }
 ol,
 ul {
-  list-style: none;
+  /* list-style: none; */
+  text-decoration: none;
 }
 blockquote,
 q {
@@ -122,3 +123,90 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+/************** CONTENT ***************/
+
+body {
+  background: rgb(10, 192, 208);
+  background: linear-gradient(
+    90deg,
+    rgba(10, 192, 208, 1) 0%,
+    rgba(20, 28, 185, 1) 100%
+  );
+
+  font-family: -apple-system, sans-serif;
+  color: #fff;
+}
+
+.container {
+  height: 100vh;
+  width: 650px;
+  max-width: 1280px;
+
+  margin: auto;
+  border: 2px #fff solid;
+  border-radius: 30px;
+
+  background: transparent;
+  /* opacity: 0.8; */
+
+  padding: 50px;
+}
+
+/************** HEADER ***************/
+header {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 70px;
+}
+
+header h1 {
+  font-size: 55px;
+  font-weight: 600;
+  margin-bottom: 20px;
+  margin-top: 50px;
+}
+
+header input,
+header button {
+  padding: 10px;
+  border-radius: 10px;
+  background: transparent;
+  border: 2px solid #fff;
+  color: #fff;
+  font-size: 20px;
+}
+
+header input:focus {
+  width: 350px;
+  outline: none;
+  border: 2px #000 solid;
+  color: #000;
+}
+
+header input::placeholder {
+  font-size: 20px;
+  color: rgba(255, 255, 255, 0.418);
+}
+
+header button:hover {
+  cursor: pointer;
+  background: #000;
+  border: 2px #000 solid;
+}
+
+/************** TODO LIST ***************/
+.todo-wrap {
+  width: 100%;
+  margin: 50px 0;
+}
+
+.todos li {
+  float: left;
+}
+
+.btns {
+  float: right;
+}
+
+/************** DONE LIST ***************/
