--- a/18-javascript-practice/bg-moving-animation/style.css
+++ b/18-javascript-practice/bg-moving-animation/style.css
@@ -127,20 +127,20 @@ table {
 /************** CONTENT ***************/
 .main {
   position: fixed;
-  width: 100%;
-  height: 100%;
+  width: 90%;
+  height: 90%;
 }
 
 .back {
   position: absolute;
-  width: 120%;
-  height: 120%;
-  left: -10%;
-  top: -10%;
+  width: 110%;
+  height: 110%;
+  left: -5%;
+  top: -5%;
 
-  background-image: url(./aria.jpeg);
+  background-image: url(./bg.jpeg);
   background-size: cover;
   background-position: center;
 
-  /* transition: all 0.3s ease-in-out; */
+  /* transition: all 0.1s ease-in-out; */
 }
