--- a/18-javascript-practice/snack-bar/style.css
+++ b/18-javascript-practice/snack-bar/style.css
@@ -5,6 +5,8 @@
 }
 
 /************** CONTENT ***************/
+
+/************** ACCORDION ***************/
 .practice {
   margin: 50px auto;
   font-weight: 400;
